<?xml version="1.0" encoding="utf-8"?>
<layout>

  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragments.HomeFragment">

    <TextView
      android:id="@+id/tv_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/home_title"
      android:textColor="@color/black"
      android:textSize="24sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/bt_find"
      android:layout_width="120dp"
      android:layout_height="60dp"
      android:layout_marginTop="15dp"
      android:backgroundTint="@color/green"
      android:text="@string/find_humans"
      android:textColor="@color/white"
      app:layout_constraintEnd_toStartOf="@id/bt_recommend_approach"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/bt_recommend_approach"
      android:layout_width="120dp"
      android:layout_height="60dp"
      android:layout_marginTop="15dp"
      android:backgroundTint="@color/green"
      android:text="@string/recommend_approach"
      android:textColor="@color/white"
      app:layout_constraintEnd_toStartOf="@id/bt_recommend_engage"
      app:layout_constraintStart_toEndOf="@id/bt_find"
      app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/bt_recommend_engage"
      android:layout_width="120dp"
      android:layout_height="60dp"
      android:layout_marginTop="15dp"
      android:backgroundTint="@color/green"
      android:text="@string/recommend_engage"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/bt_recommend_approach"
      app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rv_humans"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="10dp"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toTopOf="@id/ll_humans_data"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/bt_find"
      tools:listitem="@layout/item_human" />

    <LinearLayout
      android:id="@+id/ll_humans_data"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:orientation="horizontal"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/rv_humans"
      tools:visibility="visible">

      <ImageView
        android:id="@+id/iv_human_face"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_person"
        tools:ignore="ContentDescription" />

      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
          android:id="@+id/tv_age"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/human_age"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/tv_gender"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/human_gender"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/tv_pleasure"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/human_pleasure_state"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/tv_excitement"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/human_excitement_state"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/tv_engagement"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/human_engagement_state"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/tv_smile"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/human_smile_state"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold" />

        <TextView
          android:id="@+id/tv_attention"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:text="@string/human_attention_state"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:textStyle="bold" />

        <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

          <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_approach"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue"
            android:text="@string/approach_human"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

          <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_engage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue"
            android:text="@string/engage_human"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>